cluster/base/keycloak/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloakdb
  namespace: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloakdb
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
