cluster/base/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
